--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,4 @@
-﻿page {
+page {
   background: #f3f4f6;
   color: #111827;
   font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', 'PingFang SC', 'Helvetica Neue', sans-serif;
