--- a/miniprogram/pages/rank/rank.wxml
+++ b/miniprogram/pages/rank/rank.wxml
@@ -1,4 +1,4 @@
-﻿<view class="page-wrap rank-page">
+<view class="page-wrap rank-page">
   <view class="apple-card rank-toolbar">
     <view class="h2">英雄胜率排行</view>
 
