--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,4 @@
-﻿<view class="page-wrap index-page">
+<view class="page-wrap index-page">
   <view class="hero-block">
     <view class="h1">TFT Helper</view>
     <view class="caption hero-sub">云顶数据速查与实战辅助</view>
